--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "transforms stdout to JSON 🕸",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "build": "rimraf dist && pnpm transpile",
+    "lint": "eslint src/**/*.ts",
+    "prepare": "husky install",
+    "prepublishOnly": "pnpm test && pnpm build",
+    "release": "release-it",
+    "test": "jest",
+    "transpile": "tsc && rollup --config rollup.config.ts",
+    "typecheck": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -23,14 +30,52 @@
   },
   "homepage": "https://github.com/yowainwright/stdoutJSON#readme",
   "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
+    "lint-staged": "^12.3.5",
+    "release-it": "^14.12.5",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
+    "tslib": "^2.3.1",
     "typescript": "^4.6.2"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
+    "rules": {
+      "header-max-length": [
+        2,
+        "always",
+        120
+      ]
+    }
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "jsdom"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && jest --findRelatedTests && yarn typecheck"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "eslint --fix"
+    ]
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release v%s"
+    }
   }
 }
