--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
-	"compilerOptions": {
-		"esModuleInterop": true,
-		"outDir": "./dist",
-		"rootDir": "src",
-		"target": "esnext",
-		"module": "esnext",
-		"lib": ["esnext", "dom"],
-		"moduleResolution": "node",
-		"checkJs": false,
-		"declaration": true,
-		"strict": true
-	},
-	"exclude": ["**/__tests__/**"]
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "outDir": "./dist",
+    "rootDir": "src",
+    "target": "es5",
+    "module": "esnext",
+    "lib": ["esnext", "dom"],
+    "moduleResolution": "node",
+    "checkJs": false,
+    "declaration": true,
+    "strict": true
+  },
+  "exclude": ["**/__tests__/*ts"]
 }
