--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "stdoutjson",
   "version": "0.0.5",
   "description": "transforms stdout to JSON 🕸",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "rimraf dist && pnpm transpile",
     "lint": "eslint src/*.ts",
