fix: remove console.log

--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
   "lint-staged": {
     "src/**/*.ts": [
       "eslint --fix",
-      "jest"
+      "jest --findRelatedTests"
     ]
   },
   "release-it": {
