--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "commit-msg": "commitlint --edit $1",
     "lint": "eslint src/*.ts",
     "pre-commit": "lint-staged && pnpm typecheck",
-    "prepare": "npx husky add .husky/pre-commit 'npm run pre-commit' && npx husky add .husky/commit-msg 'npm run commit-msg'",
+    "prepare": "is-ci || npx husky install && npx husky add .husky/pre-commit 'npm run pre-commit' && npx husky add .husky/commit-msg 'npm run commit-msg'",
     "prepublishOnly": "pnpm i && pnpm test && pnpm build",
     "release": "release-it",
     "test": "jest",
@@ -44,6 +44,7 @@
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.0",
+    "is-ci": "^3.0.1",
     "jest": "^27.5.1",
     "lint-staged": "^12.3.5",
     "release-it": "^14.12.5",
