--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
   },
   "release-it": {
     "git": {
-      "commitMessage": "chore: release v$npm_package_version"
+      "commitMessage": "chore: release"
     }
   }
 }
