fix: add check for husky hooks

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "scripts": {
     "build": "rimraf dist && pnpm transpile",
     "commit-msg": "commitlint --edit $1",
+    "install:commit-msg": "(path-exists .husky/commit-msg) || (npx husky add .husky/commit-msg 'npm run commit-msg')",
+    "install:pre-commit": "(path-exists .husky/pre-commit) || (npx husky add .husky/pre-commit 'npm run pre-commit')",
     "lint": "eslint src/*.ts",
     "pre-commit": "lint-staged && pnpm typecheck",
-    "prepare": "is-ci || (husky install && npx husky add .husky/pre-commit 'npm run pre-commit' && npx husky add .husky/commit-msg 'npm run commit-msg')",
+    "prepare": "is-ci || (husky install && pnpm install:commit-msg && pnpm install:pre-commit)",
     "prepublishOnly": "pnpm i && pnpm test && pnpm build",
     "release": "release-it",
     "test": "jest",
@@ -47,6 +49,7 @@
     "is-ci": "^3.0.1",
     "jest": "^27.5.1",
     "lint-staged": "^12.3.5",
+    "path-exists-cli": "^2.0.0",
     "release-it": "^14.12.5",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
