--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "transforms stdout to JSON 🕸",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "module": "dist/index.js",
   "scripts": {
     "build": "rimraf dist && pnpm transpile",
     "commit-msg": "commitlint --edit $1",
@@ -15,7 +16,7 @@
     "prepublishOnly": "pnpm i && pnpm test && pnpm build",
     "release": "release-it",
     "test": "jest",
-    "transpile": "tsc",
+    "transpile": "tsc && rollup --config rollup.config.ts",
     "typecheck": "tsc --noEmit"
   },
   "repository": {
@@ -39,6 +40,9 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
@@ -52,6 +56,8 @@
     "path-exists-cli": "^2.0.0",
     "release-it": "^14.12.5",
     "rimraf": "^3.0.2",
+    "rollup": "^2.70.1",
+    "rollup-plugin-uglify": "^6.0.4",
     "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
