--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stdoutjson",
   "version": "0.1.3",
-  "description": "transforms stdout to JSON 🕸",
+  "description": "transforms stdout to JSON 📇",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/index.js",
