--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stdoutjson",
+  "name": "stdouttojson",
   "version": "0.2.0",
   "description": "transforms stdout to JSON 📇",
   "main": "dist/index.js",
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yowainwright/stdoutJSON.git"
+    "url": "git+https://github.com/yowainwright/stdoutToJSON.git"
   },
   "keywords": [
     "stdout",
@@ -34,9 +34,9 @@
   "author": "Jeff Wainwright <https://jeffry.in> (yowainwright@gmail.com)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/yowainwright/stdoutJSON/issues"
+    "url": "https://github.com/yowainwright/stdoutToJSON/issues"
   },
-  "homepage": "https://github.com/yowainwright/stdoutJSON#readme",
+  "homepage": "https://github.com/yowainwright/stdoutToJSON#readme",
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
