--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "module": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rimraf dist && pnpm transpile",
     "commit-msg": "commitlint --edit $1",
@@ -55,6 +58,7 @@
     "release-it": "^15.0.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.70.1",
+    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.4.0",
     "typescript": "^4.6.2",
     "vitest": "^0.14.1"
