--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "declaration": true,
     "strict": true
   },
-  "exclude": ["**/__tests__/*ts", "rollup.config.ts"]
+  "exclude": ["tests/*.ts", "rollup.config.ts"]
 }
