--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,14 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
-    "outDir": "./dist",
-    "rootDir": "src",
-    "target": "es5",
+    "rootDir": ".",
+    "target": "esnext",
     "module": "esnext",
     "lib": ["esnext", "dom"],
     "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "checkJs": false,
-    "declaration": true,
-    "strict": true
   },
-  "exclude": ["tests/*.ts", "rollup.config.ts"]
+  "include": ["rollup.config.ts", "src/*"],
+  "exclude": ["tests/*"]
 }
