--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "rootDir": ".",
+    "outDir": "./dist",
     "target": "esnext",
     "module": "esnext",
     "lib": ["esnext", "dom"],
@@ -9,6 +10,6 @@
     "allowSyntheticDefaultImports": true,
     "checkJs": false,
   },
-  "include": ["rollup.config.ts", "src/*"],
+  "include": ["rollup.config.ts", "src/index.ts"],
   "exclude": ["tests/*"]
 }
