--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -26,7 +26,7 @@ jobs:
       - run: pnpm install --no-frozen-lockfile
       - run: pnpm build
       - run: pnpm test
-      - run: pnpm update
+      - run: pnpm run update
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
