--- a/package.json
+++ b/package.json
@@ -42,28 +42,28 @@
   },
   "homepage": "https://loom.com/share/6b7082bd802b43618646242477701def",
   "devDependencies": {
-    "@commitlint/cli": "17.3.0",
-    "@commitlint/config-conventional": "17.3.0",
-    "@rollup/plugin-commonjs": "24.0.0",
+    "@commitlint/cli": "17.4.4",
+    "@commitlint/config-conventional": "17.4.4",
+    "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-node-resolve": "15.0.1",
-    "@rollup/plugin-typescript": "10.0.1",
-    "@types/node": "18.11.18",
-    "@typescript-eslint/eslint-plugin": "5.47.1",
-    "@typescript-eslint/parser": "5.47.1",
+    "@rollup/plugin-typescript": "11.0.0",
+    "@types/node": "18.14.2",
+    "@typescript-eslint/eslint-plugin": "5.53.0",
+    "@typescript-eslint/parser": "5.53.0",
     "codependence": "^0.2.6",
-    "eslint": "8.31.0",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "8.0.2",
+    "eslint": "8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "husky": "8.0.3",
     "is-ci": "^3.0.1",
-    "lint-staged": "13.1.0",
+    "lint-staged": "13.1.2",
     "path-exists-cli": "^2.0.0",
     "release-it": "15.6.0",
-    "rimraf": "^3.0.2",
-    "rollup": "3.9.0",
+    "rimraf": "4.1.2",
+    "rollup": "3.17.3",
     "rollup-plugin-terser": "^7.0.2",
-    "tslib": "2.4.1",
-    "typescript": "4.9.4",
-    "vitest": "0.26.2"
+    "tslib": "2.5.0",
+    "typescript": "4.9.5",
+    "vitest": "0.29.1"
   },
   "commitlint": {
     "extends": [
@@ -91,5 +91,8 @@
     "git": {
       "commitMessage": "chore: release"
     }
+  },
+  "dependencies": {
+    "json5": "^2.2.3"
   }
 }
