fix: updates update deps

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -24,7 +24,7 @@ jobs:
           cache: 'pnpm'
       - run: pnpm install --no-frozen-lockfile
       - run: pnpm build
-      - run: pnpm cmd:script
+      - run: pnpm test
       - run: pnpm update
       - run: pnpm install --no-frozen-lockfile
       - name: Create Pull Request
