chore: updates husky

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "scripts": {
     "build": "rimraf dist && tsup src/index.ts --format cjs,esm --dts --minify --clean --sourcemap --legacy-output",
     "commit-msg": "commitlint --edit $1",
-    "install:commit-msg": "(path-exists .husky/commit-msg) || (npx husky add .husky/commit-msg 'npm run commit-msg')",
-    "install:pre-commit": "(path-exists .husky/pre-commit) || (npx husky add .husky/pre-commit 'npm run pre-commit')",
+    "install:commit-msg": "[ -d '.husky' ] || (mkdir .husky && echo 'npm run commit-msg' > .husky/commit-msg && chmod +x .husky/commit-msg)",
+    "install:pre-commit": "[ -d '.husky' ] || (echo 'npm run pre-commit' > .husky/pre-commit && chmod +x .husky/pre-commit)",
     "lint": "eslint src/*.ts",
     "pre-commit": "lint-staged && pnpm typecheck",
     "prepare": "is-ci || (husky install && pnpm install:commit-msg && pnpm install:pre-commit)",
@@ -48,12 +48,11 @@
     "@typescript-eslint/eslint-plugin": "7.6.0",
     "@typescript-eslint/parser": "7.6.0",
     "codependence": "^0.2.6",
-    "eslint": "8.5.7",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "9.0.11",
     "is-ci": "^3.0.1",
     "lint-staged": "15.2.2",
-    "path-exists-cli": "^2.0.0",
     "release-it": "17.2.0",
     "rimraf": "5.0.5",
     "tslib": "2.6.2",
