--- a/package.json
+++ b/package.json
@@ -42,18 +42,18 @@
   },
   "homepage": "https://loom.com/share/6b7082bd802b43618646242477701def",
   "devDependencies": {
-    "@commitlint/cli": "19.2.2",
+    "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
     "@types/node": "20.12.7",
-    "@typescript-eslint/eslint-plugin": "7.6.0",
-    "@typescript-eslint/parser": "7.6.0",
-    "codependence": "^0.2.6",
+    "@typescript-eslint/eslint-plugin": "7.7.1",
+    "@typescript-eslint/parser": "7.7.1",
+    "codependence": "0.3.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "husky": "9.0.11",
     "is-ci": "^3.0.1",
     "lint-staged": "15.2.2",
-    "release-it": "17.2.0",
+    "release-it": "17.2.1",
     "rimraf": "5.0.5",
     "tslib": "2.6.2",
     "tsup": "^8.0.1",
